# xsd_viewer

./: .gitignore  README.md  app.py  generate_doc.py  github_fetcher.py  pyproject.toml  requirements.txt
.claude/: settings.local.json
.streamlit/: config.toml
core/: __init__.py  layout_engine.py  svg_primitives.py  svg_renderer.py  xsd_model.py  xsd_parser.py
examples/: purchase.xsd  purchase_doc.html
